<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".ui.detail.DetailActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:paddingBottom="20dp">

        <ImageView
            android:id="@+id/img_detail"
            android:layout_width="150dp"
            android:layout_height="170dp"
            android:contentDescription="@string/poster"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/tv_detail_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/movies_title"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_toRightOf="@id/img_detail"
            android:layout_toEndOf="@id/img_detail"
            />

        <TextView
            android:id="@+id/tv_detail_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/movies_date"
            android:layout_toRightOf="@id/img_detail"
            android:layout_toEndOf="@id/img_detail"
            android:layout_below="@+id/tv_detail_name"
            />

        <TextView
            android:id="@+id/tv_detail_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:text="@string/movies_language"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="italic"
            android:layout_below="@id/img_detail"
            android:layout_centerHorizontal="true"
            />

        <TextView
            android:id="@+id/tv_detail_dir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/popularity"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_below="@id/tv_detail_language"
            />

        <TextView
            android:id="@+id/tv_detail_popularity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:text="@string/movies_popularity"
            android:textSize="16sp"
            android:layout_toRightOf="@id/tv_detail_dir"
            android:layout_below="@id/tv_detail_language"
            android:layout_toEndOf="@id/tv_detail_dir" />

        <TextView
            android:id="@+id/tv_detail_o"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/overview"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_below="@id/tv_detail_dir"
            />

        <TextView
            android:id="@+id/tv_detail_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:justificationMode="inter_word"
            android:text="@string/movies_desc"
            android:textSize="16sp"
            android:layout_below="@id/tv_detail_o"
            tools:targetApi="o" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_detail_overview"
            android:layout_alignEnd="@id/tv_detail_overview"
            android:layout_alignRight="@id/tv_detail_overview"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/favbutton"
            android:foregroundGravity="bottom"
            app:srcCompat="@drawable/ic_favorite_black_24dp"
            app:backgroundTint="#9C27B0"
            app:fabSize="normal"
            app:layout_anchor="@id/tv_detail_overview"
            app:layout_anchorGravity="bottom|end"
            />

    </RelativeLayout>
</ScrollView>