<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_movie_creation_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_tvshows"
        android:icon="@drawable/ic_live_tv_black_24dp"
        android:title="@string/title_tv_shows" />

    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_favorite" />

</menu>